Fixed buttons and z-index of top and bottom bars

--- a/public/css/page_framework.less
+++ b/public/css/page_framework.less
@@ -31,6 +31,7 @@ body {
 
 	text-align: center;
 
+	display: flex;
 }
 
 #right_bar {
@@ -45,9 +46,10 @@ body {
 
 .bar_content {
 	width: 100%;
-	height: 100%;
 	vertical-align: middle;
 	list-style: none;
+
+	margin: auto;
 }
 
 .side_button {
@@ -56,7 +58,7 @@ body {
 	width: 100%;
 	padding: 5%;
 	text-align: center;
-	border-top: 2px solid @border_color;
+	// border-top: 2px solid @border_color;
 
 	img {
 		height: 50px;
@@ -70,7 +72,7 @@ body {
 }
 
 .bar_content > li:last-child > .side_button {
-	border-bottom: 2px solid @border_color;
+	// border-bottom: 2px solid @border_color;
 }
 
 /** Container **/
@@ -105,6 +107,8 @@ body {
 
 	background-color: @fb_blue;
 	opacity: .4;
+
+	z-index: 10000000;
 
 	img {
 		line-height: 100%;
